--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f0f0f0; /* Fundo cinza claro suave */
-    color: #333; /* Texto principal em preto suave */
+    background-color: #f0f0f0;
+    color: #333;
 }
 
 header {
-    background-color: #3498db; /* Azul moderno para o cabeçalho */
+    background-color: #3498db;
     color: #fff;
     padding: 2rem 0;
     text-align: center;
@@ -31,21 +31,22 @@ main {
 }
 
 .maravilha {
-    background-color: #fff; /* Fundo branco para as seções */
+    background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     margin-bottom: 2rem;
     padding: 1.5rem;
     text-align: center;
-    border-left: 5px solid #2ecc71; /* Borda lateral verde de destaque */
+    border-left: 5px solid #2ecc71;
 }
 
 .maravilha h2 {
-    color: #2c3e50; /* Cor escura para os títulos */
+    color: #2c3e50;
     margin-top: 0;
 }
 
 .maravilha img {
-    max-width: 100%;
+    max-width: 75%;
     height: auto;
+
     }
