--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ main {
     margin-bottom: 2rem;
     padding: 1.5rem;
     text-align: center;
-    border-left: 5px solid #2ecc71;
+    border-left: 5px solid #2e58cc;
 }
 
 .maravilha h2 {
@@ -50,3 +50,4 @@ main {
     height: auto;
 
     }
+
